hero area changes

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <!-- javascript -->
     <script src="./script.js" defer></script>
 
-    <title>World Cup Landing Page</title>
+    <title>Qatar World Cuo</title>
   </head>
   <body>
     <header id="main-header" class="main-header">
-      <div class="top">
+      <div class="nav-area">
         <div class="container flex">
           <div class="logo-area">
             <img src="./images/logo.png" alt="" class="logo" />
@@ -58,7 +58,7 @@
 
           <div class="hero__text">
             <h1 class="title">Qatar 2022</h1>
-            <h2>Now is All™</h2>
+            <h2 class="sub-title">Now is All™</h2>
             <p class="intro">
               As we count down to the start of the global showpiece in Qatar on
               20 November, FIFA+ is showcasing 100 of the greatest moments in
