changed document title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- javascript -->
     <script src="./script.js" defer></script>
 
-    <title>Qatar World Cuo</title>
+    <title>Qatar World Cup</title>
   </head>
   <body>
     <header id="main-header" class="main-header">
